Clinic address added to front page; Ability to change visit status to 'Ready To Bill' for billed, but not yet paid visits. This will allow to resubmit unpaid claims

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -177,6 +177,12 @@ td.hlight {
   }
 }
 
+#address {
+  font-size: 0.9em;
+  font-weight: bold;
+  margin-left: 20px;  
+}
+
 .hdr-text {
   margin-right: 10px;
   font-size: 1.8em;
