--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,9 @@
 <div class="spacer-10"></div>
+<div style="float:left">
 <div id='logo' style="padding:20px">
 <img src='/images/clinic.jpg' width="480"></img>
+</div>
+<div id="address">140 Centennial Pkwy N, Hamilton, ON L8E 1H9 (905)-561-9255 </div>
 </div>
 
 <div class="hdr-text">We are open every day!  </div> 
