home page updated

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -24,7 +24,7 @@ Pharmacy is available on the premises. Need a flushot? We provide flu shots and 
 <p class="medium">
 We work together with the public Health Department and many specialists to satisfy the needs of our patients.
 Please arrive half an hour before closing time.  Schedules are subject to change without notice. 
-Call to confirm: <b>(905) 561-9255</b>
+Table below provides most current schedule and is updated daily.
 </p>
 
 <div class='spacer-10'></div>
