--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -6,7 +6,7 @@
       <tr>
           <th><%= sortable 'entry_ts', 'Date' %></th>
           <th class="tbl_lg">Patient</th>
-	  <th class="tbl_sm">Type</th>
+	  <th class="tbl_sm">V.Type</th>
  	  <th>Doctor</th>
           <th><%= sortable 'diag_code', 'Diag Code' %></th>
           <th>Svc Code</th>
